tests added, others fixed

--- a/BankingApi/Properties/launchSettings.json
+++ b/BankingApi/Properties/launchSettings.json
@@ -12,9 +12,9 @@
     "BankingApi": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5100",
+      "applicationUrl": "http://localhost:5101",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
